# skill-replicate-environment

./: .gitignore  AGENTS.md  Makefile  pyproject.toml
k8s/base/api-gateway/: deployment.yaml  service.yaml
k8s/base/notification-service/: deployment.yaml  service.yaml
k8s/base/order-service/: deployment.yaml  service.yaml
k8s/base/product-service/: deployment.yaml  service.yaml
k8s/base/user-service/: deployment.yaml  service.yaml
k8s/overlays/dev/: kustomization.yaml  versions.env
k8s/overlays/dev/api-gateway/: kustomization.yaml  namespace.yaml
k8s/overlays/dev/notification-service/: kustomization.yaml  namespace.yaml
k8s/overlays/dev/order-service/: kustomization.yaml  namespace.yaml
k8s/overlays/dev/product-service/: kustomization.yaml  namespace.yaml
k8s/overlays/dev/user-service/: kustomization.yaml  namespace.yaml
k8s/overlays/dev2/: versions.env
k8s/overlays/dev2/api-gateway/: kustomization.yaml  namespace.yaml
k8s/overlays/dev2/notification-service/: kustomization.yaml  namespace.yaml
k8s/overlays/dev2/order-service/: kustomization.yaml  (+1 more)
k8s/overlays/dev4/: kustomization.yaml
k8s/overlays/luat/: kustomization.yaml  versions.env
k8s/overlays/production/: kustomization.yaml  versions.env
k8s/overlays/staging/: kustomization.yaml  versions.env
scripts/: build-images.sh  delete-env.sh  deploy-env.sh
services/api-gateway/src/: main.py
services/notification-service/src/: main.py
services/order-service/src/: main.py
services/product-service/src/: main.py
services/user-service/src/: main.py
skills/new-env/: SKILL.md
(+74 files in other folders)
