[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sk1-dev-tools"
version = "0.1.0"
description = "Local dev tooling for the sk1 microservices cluster"
requires-python = ">=3.11"

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = []

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
